[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spork"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [{ name = "Kyle Kelley", email = "rgbkrk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pydantic", "IPython", "typing-extensions"]

[project.urls]
Documentation = "https://github.com/rgbkrk/spork#readme"
Issues = "https://github.com/rgbkrk/spork/issues"
Source = "https://github.com/rgbkrk/spork"

[tool.setuptools.package-data]
spork = ["py.typed"]

[tool.hatch.version]
path = "src/spork/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/spork tests}"

[tool.hatch.metadata.package-data]
spork = ["py.typed"]

[tool.coverage.run]
source_pkgs = ["spork", "tests"]
branch = true
parallel = true
omit = ["src/spork/__about__.py"]

[tool.coverage.paths]
spork = ["src/spork", "*/spork/src/spork"]
tests = ["tests", "*/spork/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
